20110404 (T.S.)
 - README.drvPadUdpComm: updated (minor).
20100524 (T.S.)
 - src/padStream.c: added more statistics counters.
 - README: updated.
20100423 (T.S.)
 - updated RELEASE_NOTES; released udpComm-R1-2-0
20100416 (T.S.)
 - src/udpComm.h, src/udpCommBSD.c: REMOVED wrong UDPCOMM_ALIGNMENT
   definition. The payload of lanIpBasic UDP packetes is ***NOT***
   aligned but at a well defined offset (-4) from an alignment 
   boundary.
   In order to alert users the UDPCOMM_ALIGNMENT symbol was replaced
   by UDPCOMM_DATA_ALGN and UDPCOMM_DATA_ALGN_OFF, the offset that 
   takes you to an alignment boundary was added.
20100407 (T.S.)
 - Added README.drvPadUdpComm: (rudimentary documentation).
20100407 (T.S.)
 - src/drvPadUdpComm.h, src/drvPadUdpComm.c: Support special return
   values for 'cook' callback which cause the raw data to be
   posted to dedicated wavBufs for debugging purposes.

   Added definitions for 'cook' callback return values.
20100407 (T.S.)
 - src/wavBuf.h: Increased number of 'KINDS' to 10.
20100330 (T.S.)
 - MOD: src/padStream.c: Avoid an ARP lookup! Instead, use peer's MAC
   address (from request packet) and issue arpPutEntry() to ensure.
20100330 (T.S.)
 - FIX: src/padStream.c: padStreamSend() would often fail after a successful
   padStreamStart(). This was because recent lanIpBasic only asynchronously
   updates the ARP cache. Hence, it was likely that no valid entry was
   present immediately after processing the padStreamStart().
   To fix this we explicitly do a synchronous ARP lookup from padStreamStart().
20100218 (T.S.)
 - BUGFIX: src/drvPadUdpComm.c: padUdpCommInit() must call io.open() only
   *after* installing vmeUdpComm IO methods.
20100208 (T.S.)
 - src/udpComm.h, src/udpCommBSD.c: Let udpCommConnect() treat broadcast
   peer addresses the same as multicast peers (BSD semantics also reject
   any incoming traffic if peer is a BC address). Documented this change
   in udpComm.h (and README).
20100208 (T.S.)